test/spec_vectors/simd_i8x16_arith2/fail/module_7.wat
(module (func (result v128) (i8x16.min_s (i32.const 0) (f32.const 0.0))))